# cursesGame

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_tools.sh  todocheck.sh  vimsession
data/DATA/: DAT000.TXT
data/LEVEL/: MAP000.TST
src/: main.c
src/common/: data.c  data.h  definitions.h  main.c  map.c  map.h  shgeom.c  shgeom.h  shmath.h
src/sp/: main.c
src/tools/: main.c
test/: buildtest.sh  random_1.c  test_linedraw.c  test_thread.c  test_threads-io.c
