cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED on)

project(prog VERSION 0.0.1)
file(GLOB_RECURSE SRC_FILES_SP ./src/sp/*.c)
file(GLOB_RECURSE SRC_FILES_TOOLS ./src/tools/*.c)
add_executable(prog ${SRC_FILES_SP})
add_executable(data_editor ${SRC_FILES_SP})
target_link_libraries(prog PUBLIC curses pthread m)
target_link_libraries(data_editor PUBLIC curses pthread m)
